Tap to hide the AUTO_HIDE_SHOWN shelf.

Currently we can see AUTO_HIDE_SHOWN shelf can be hidden when tap inside
some of the apps, e.g, chrome browser. That is because of the window
hierarchy, stacking changes or set bounds for the child windows. Tap
inside of some the apps like "Files" or Wallpaper can't hide the
AUTO_HIDE_SHOWN shelf since we don't have the related logic for TAP
event. This cl adds the logic that tap outside of the AUTO_HIDE_SHOWN
shelf to hide it.


Bug: 882059, b/119322652
Change-Id: I8fc5b6d06a885a7b77280cbf86de4d830c04a296
Reviewed-on: https://chromium-review.googlesource.com/c/1343511
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609885}
Former-commit-id: b5d22b702903e7bc9b1bc87ffe89b58bfc37c4e7